--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
     "strict": true,
     "esModuleInterop": true,
     "emitDeclarationOnly": false,
-    "declarationDir": "dist/types"
+    "declarationDir": "dist/types",
+    "removeComments": false 
   },
   "include": ["src"]
 }
