--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "opendata-api",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "description": "정책자금, 서민대출 등 공공데이터 API 래퍼",
   "keywords": [
     "opendata",
@@ -21,6 +21,7 @@
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
+      "types": "./dist/index.d.ts",
       "import": "./dist/index.mjs",
       "require": "./dist/index.cjs"
     }
